# maddy-morphos

./: CMakeLists.txt  Makefile.mos  README.md
src/: CMakeLists.txt  main.cpp
